--- a/.github/workflows/build-arch-iso.yml
+++ b/.github/workflows/build-arch-iso.yml
@@ -1,3 +1,5 @@
+# .github/workflows/build-arch-iso.yml
+
 name: Build Custom Arch ISO
 
 on:
@@ -30,7 +32,7 @@ jobs:
           mkarchiso -v -w /tmp/archiso-work -o out archiso-releng
 
       - name: Upload ISO as action artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: custom-archlinux.iso
           path: out/*.iso
@@ -47,7 +49,7 @@ jobs:
           prerelease: false
 
       - name: Upload ISO to Release
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
