--- a/.github/workflows/build-arch-iso.yml
+++ b/.github/workflows/build-arch-iso.yml
@@ -22,12 +22,23 @@ jobs:
 
       - name: Install archiso
         run: |
-          pacman -Sy --noconfirm archiso
+          pacman -Sy --noconfirm archiso git
+
+      - name: Copy official releng profile
+        run: |
+          rm -rf /tmp/build-releng
+          mkdir -p /tmp/build-releng
+          cp -r /usr/share/archiso/configs/releng/* /tmp/build-releng/
+
+      - name: Overlay custom files onto build-releng
+        run: |
+          cp -r overlay/airootfs/* /tmp/build-releng/airootfs/
+          cp -r overlay/syslinux/*  /tmp/build-releng/syslinux/
 
       - name: Build Arch ISO
         run: |
           rm -rf /tmp/archiso-work out
-          mkarchiso -v -w /tmp/archiso-work -o out archiso-releng
+          mkarchiso -v -w /tmp/archiso-work -o out /tmp/build-releng
 
       - name: Upload ISO as action artifact
         uses: actions/upload-artifact@v4
