--- a/overlay/syslinux/archiso_sys.cfg
+++ b/overlay/syslinux/archiso_sys.cfg
@@ -5,4 +5,4 @@ LABEL autoinstall
   MENU LABEL Instalación automática completa
   LINUX /arch/boot/x86_64/vmlinuz
   INITRD /arch/boot/intel_ucode.img,/arch/boot/x86_64/archiso.img
-  APPEND archisobasedir=arch archisolabel=ARCH_2025.04.01 quiet systemd.unit=autoinstall.service
+  APPEND archisobasedir=arch archisolabel=ARCH_2025.04.01 quiet init=/root/autoinstall.sh
