--- a/.github/workflows/build-livecd.yml
+++ b/.github/workflows/build-livecd.yml
@@ -46,61 +46,51 @@ jobs:
           cat > packages.x86_64 << "EOF"
           # Base system
           base
-          base-devel
           linux
           linux-firmware
+          mkinitcpio
+          mkinitcpio-archiso
 
-          # Boot and filesystem
+          # Boot and filesystem essentials
           syslinux
           efibootmgr
           dosfstools
           mtools
           squashfs-tools
+          arch-install-scripts
 
           # Network
           networkmanager
           dhcpcd
+          wpa_supplicant
 
-          # KDE Plasma
-          plasma-meta
-          kde-applications-meta
-          plasma-wayland-protocols
-
-          # Display manager
+          # KDE Plasma minimal
+          plasma-desktop
           sddm
+          konsole
+          dolphin
+          kate
 
           # Audio
           pipewire
           pipewire-alsa
           pipewire-pulse
-          pipewire-jack
 
           # Graphics drivers
+          mesa
           xf86-video-intel
           xf86-video-amdgpu
           xf86-video-nouveau
-          mesa
 
-          # Utilities
+          # Basic utilities
           firefox
-          konsole
-          dolphin
-          kate
-          ark
-          spectacle
-          gwenview
-          okular
-
-          # System tools
           htop
-          fastfetch
           git
           vim
           nano
 
           # Fonts
           ttf-dejavu
-          ttf-liberation
           noto-fonts
           EOF
           '
@@ -158,17 +148,6 @@ jobs:
           # Configurar sudo sin contraseña para wheel
           echo "%wheel ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 
-          # Configurar KDE para liveuser
-          mkdir -p /home/liveuser/.config
-          cat > /home/liveuser/.config/startupconfig << "KDEEOF"
-          kcminputrc Mouse cursorTheme "breeze_cursors"
-          kcminputrc Mouse cursorSize ""
-          kwinrc Compositing Enabled true
-          kwinrc Compositing AnimationSpeed 3
-          KDEEOF
-
-          chown -R 1000:1000 /home/liveuser/.config
-
           # Configurar teclado español
           echo "KEYMAP=es" > /etc/vconsole.conf
 
@@ -177,6 +156,12 @@ jobs:
           echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen
           locale-gen
           echo "LANG=es_ES.UTF-8" > /etc/locale.conf
+
+          # Configurar mkinitcpio para archiso
+          sed -i 's/^HOOKS=.*/HOOKS=(base udev archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs archiso_kms modconf block filesystems keyboard)/' /etc/mkinitcpio.conf
+
+          # Generar initramfs
+          mkinitcpio -P
           EOF
 
           chmod +x airootfs/root/customize_airootfs.sh
@@ -219,19 +204,35 @@ jobs:
           MENU LABEL Boot Arch Linux KDE Live (default)
           LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
           INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=1G quiet splash
+          APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=2G copytoram=n
           EOF
 
           # Configurar profiledef.sh para corregir parámetros
-          cat >> profiledef.sh << "EOF"
+          cat > profiledef.sh << "EOF"
+          #!/usr/bin/env bash
+          # shellcheck disable=SC2034
 
-          # Configuración adicional para Live CD
+          iso_name="archlinux-kde"
           iso_label="ARCH_KDE"
           iso_publisher="Arch Linux KDE Live"
           iso_application="Arch Linux KDE Live CD"
+          iso_version="$(date +%Y.%m.%d)"
+          install_dir="arch"
+          buildmodes=("iso")
           bootmodes=("bios.syslinux.mbr" "bios.syslinux.eltorito" "uefi-x64.systemd-boot.esp" "uefi-x64.systemd-boot.eltorito")
+          arch="x86_64"
+          pacman_conf="pacman.conf"
           airootfs_image_type="squashfs"
-          airootfs_image_tool_options=("-comp" "xz" "-Xbcj" "x86" "-b" "1M")
+          airootfs_image_tool_options=("-comp" "xz" "-Xbcj" "x86" "-b" "1M" "-Xdict-size" "1M")
+          file_permissions=(
+            ["/etc/shadow"]="0:0:400"
+            ["/etc/gshadow"]="0:0:400"
+            ["/root"]="0:0:750"
+            ["/root/.automated_script.sh"]="0:0:755"
+            ["/usr/local/bin/choose-mirror"]="0:0:755"
+            ["/usr/local/bin/Installation_guide"]="0:0:755"
+            ["/usr/local/bin/livecd-sound"]="0:0:755"
+          )
           EOF
           '
 
